# ray-tracer

./: README.md
src/: BoundingBox.cc  BoundingBox.hh  BoundingSphere.hh  CMakeLists.txt  Cylinder.cc  Cylinder.hh  MyMesh.hh  MyMeshObject.cc  MyMeshObject.hh  MyVecs.hh  camera.cc  camera.hh  defs.hh  lights.cc  lights.hh  lights_inline.hh  object.hh  polygon.cc  polygon.hh  print_debug.hh  ray.hh  rotation.cc  rotation.hh  scene.cc  scene.hh  sphere.cc  sphere.hh  threading.cc  threading.hh  toolkits.hh
src/example/: Arguments.cc  Arguments.hh  MyScene.cc
